--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "module": "src/index.js",
   "scripts": {
     "build": "rollup -c",
-    "lint": "eslint src/*.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/*.js test/*.js",
+    "pretest": "npm run build",
+    "test": "jest --coverage",
     "size": "npm run build && size-limit",
     "prepare": "npm run build"
   },
@@ -33,6 +34,9 @@
       "path": "index.js"
     }
   ],
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.1",
     "eslint": "^7.30.0",
@@ -40,6 +44,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "jest": "^27.0.6",
     "rollup": "^2.53.0",
     "size-limit": "^5.0.1"
   }
