--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,8 @@
 name: Publish Package
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [main]
 
 jobs:
   quality:
@@ -22,28 +22,9 @@ jobs:
       - run: npm run build
       - run: npm run lint
       - run: npm run test
-      
-  bump-version:
-    needs: quality
-    name: Bump package.json to ${{ github.event.release.tag_name }}
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          
-      - name: Bump version (${{ github.event.release.tag_name }})
-        run: npm version from-git --git-tag-version false --commit-hooks false
-
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Bump version to ${{ github.event.release.tag_name }}
 
   publish-npm:
-    needs: [quality, bump-version]
+    needs: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -61,7 +42,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
   publish-gpr:
-    needs: [quality, bump-version]
+    needs: quality
     runs-on: ubuntu-latest
     permissions:
       contents: read
