--- a/.github/workflows/increment-version.yml
+++ b/.github/workflows/increment-version.yml
@@ -20,8 +20,14 @@ jobs:
       - run: git config --global user.email '$GITHUB_ACTOR@noreply.github.com'
       
       - name: Increment version (${{ github.event.release.tag_name }})
-        run: npm version ${{ github.event.release.tag_name }} -m "[RELEASE] %s" --git-tag-version false
+        run: |
+          npm config set git-tag-version false
+          npm config set commit-hooks false
+          npm version ${{ github.event.release.tag_name }}
         
-      - name: Push changes
-        run: git push
+      - name: Commit changes
+        run: |
+          git add .
+          git commit -m "[RELEASE] ${{ github.event.release.tag_name }}"
+          git push
         
