--- a/.github/workflows/increment-version.yml
+++ b/.github/workflows/increment-version.yml
@@ -17,7 +17,7 @@ jobs:
           token: ${{ secrets.ACTION_BOT_PAT }}
           
       - run: git config --global user.name '$GITHUB_ACTOR'
-      - run: git config --global user.email '$GITHUB_ACTOR@noreply.github.com'
+      - run: git config --global user.email '$GITHUB_ACTOR@users.noreply.github.com'
       
       - name: Increment version (${{ github.event.release.tag_name }})
         run: |
