--- a/.github/workflows/increment-version.yml
+++ b/.github/workflows/increment-version.yml
@@ -15,10 +15,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.ACTION_BOT_PAT }}
-          ref: ${{ github.event.release.head.ref }}
+          ref: ${{ github.ref }}
           
-      - run: git config --global user.name '$GITHUB_ACTOR'
-      - run: git config --global user.email '$GITHUB_ACTOR@users.noreply.github.com'
+      - run: git config --global user.name '${{$GITHUB_ACTOR}}'
+      - run: git config --global user.email '${{$GITHUB_ACTOR}}@users.noreply.github.com'
       
       - name: Increment version (${{ github.event.release.tag_name }})
         run: |
