--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,12 +4,11 @@
 name: Publish Package
 
 on:
-  push:
-    branches: [main]
+  release:
+    types: [published]
 
 jobs:
   quality:
-    if: "startsWith(github.event.head_commit.message, '[RELEASE]')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -37,7 +36,7 @@ jobs:
       - name: Install packages 
         run: npm install
       
-      - name: Publish on npm
+      - name: Publish ${{ github.event.release.tag_name }} on npm
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
@@ -58,7 +57,7 @@ jobs:
       - name: Install packages
         run: npm install
         
-      - name: Publish on Github Packages
+      - name: Publish ${{ github.event.release.tag_name }} on Github Packages
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
